MWPW-191862 | Fixing empty section visibility in da panel (#125)
MWPW-191862 | Fixing empty section visibility in da panel
Breadcrumbs are not rendered in edit view as header is not added. As a fix removing this block form diff render as diff will only have page part.

--- a/streamlibs/operations/edit/edit.css
+++ b/streamlibs/operations/edit/edit.css
@@ -256,3 +256,8 @@ div.da-panel.hidden,
 div.figma-panel.hidden {
   display: none;
 }
+
+.figma-panel .section:not(:has(div)),
+.da-panel .section:not(:has(div)) {
+    display: none;
+}
